2009-06-26  Jeffrey Stedfast  <fejj@novell.com>

	* runtime.cpp: Don't need to call font_init() or font_shutdown()
	anymore.

	* deployment.cpp: Create a new FontManager per Deployment and
	provide an access method to get at it.

	* textblock.cpp, glyphs.cpp, textbox.cpp: Updated for the font
	loading APIs.

	* provider.cpp: Removed FontFilenameProperty and FontGUIDProperty
	inheritance, these no longer exist.

	* fonts.cpp|h: New source files with the higher-level abstraction
	for font loading, glyph manipulation, etc.

	* fontmanager.cpp|h: New source files containing a FontManager
	class which handles caching of font faces and indexing of font
	resources. Serves as platform-dependent font loading layer.

	* font.cpp|h: Removed.

2009-06-26  Jeffrey Stedfast  <fejj@novell.com>

	* uri.cpp (ToString): Respct the UriHideQuery flag.

2009-06-26  Larry Ewing  <lewing@novell.com>

	* border.h: change the default value.

	* cornerradius.h: reorder the bottom* arguments.

2009-06-26  Alan McGovern  <amcgovern@novell.com>

	* popup.h:
	* popup.cpp: Handle popup hittesting when its closed in a way
	  that doesn't suck.

2009-06-26  Alan McGovern  <amcgovern@novell.com>

	* popup.cpp: Keep the RENDER_VISIBLE flag in sync with the
	  IsOpen state so that hittesting works correctly.

2009-06-25  Chris Toshok  <toshok@ximian.com>

	* xaml.h|cpp (xaml_is_valid_event_name): pass in the type of the
	object we're looking the event up on, and a flag as to whether or
	not to allow desktop-specific events.  and just look up the event
	from the type system instead of having the hardcoded list.

2009-06-25  Larry Ewing  <lewing@novell.com>

	* grid.cpp, grid.h (PostRender): move the grid lines from Render to
	PostRender so that the lines are on top of the children (which
	appears to be the sl behavior).  Fixes at least 317 and 446.
	
2009-06-25  Sebastien Pouliot  <sebastien@ximian.com>

	* downloader.cpp: Fix MediaElement policy wrt cross-domain access.
	Fix two unnumbered DRT tests.